update TODIM code

--- a/TODIM/TODIM Ranking.ipynb
+++ b/TODIM/TODIM Ranking.ipynb
@@ -58,7 +58,7 @@
        "      <th></th>\n",
        "      <th>Criteria</th>\n",
        "      <th>Name</th>\n",
-       "      <th>Weight</th>\n",
+       "      <th>Rank</th>\n",
        "      <th>Ideally</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -67,49 +67,49 @@
        "      <th>0</th>\n",
        "      <td>Price</td>\n",
        "      <td>Price</td>\n",
-       "      <td>0.1859</td>\n",
+       "      <td>3</td>\n",
        "      <td>Lower</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Quality</td>\n",
        "      <td>Quality</td>\n",
-       "      <td>0.2788</td>\n",
+       "      <td>5</td>\n",
        "      <td>Higher</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>EC</td>\n",
        "      <td>Energy Consumption</td>\n",
-       "      <td>0.1115</td>\n",
-       "      <td>Higher</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Lower</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>GD</td>\n",
        "      <td>Green Design</td>\n",
-       "      <td>0.1394</td>\n",
+       "      <td>1</td>\n",
        "      <td>Higher</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>DS</td>\n",
        "      <td>Delivery Speed</td>\n",
-       "      <td>0.0929</td>\n",
+       "      <td>6</td>\n",
        "      <td>Higher</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>CSR</td>\n",
        "      <td>Corporate Social Responsibility</td>\n",
-       "      <td>0.1115</td>\n",
+       "      <td>4</td>\n",
        "      <td>Higher</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>EE</td>\n",
        "      <td>Employee Education</td>\n",
-       "      <td>0.0796</td>\n",
+       "      <td>7</td>\n",
        "      <td>Higher</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -117,14 +117,14 @@
        "</div>"
       ],
       "text/plain": [
-       "  Criteria                             Name  Weight Ideally\n",
-       "0    Price                            Price  0.1859   Lower\n",
-       "1  Quality                          Quality  0.2788  Higher\n",
-       "2       EC               Energy Consumption  0.1115  Higher\n",
-       "3       GD                     Green Design  0.1394  Higher\n",
-       "4       DS                   Delivery Speed  0.0929  Higher\n",
-       "5      CSR  Corporate Social Responsibility  0.1115  Higher\n",
-       "6       EE               Employee Education  0.0796  Higher"
+       "  Criteria                             Name  Rank Ideally\n",
+       "0    Price                            Price     3   Lower\n",
+       "1  Quality                          Quality     5  Higher\n",
+       "2       EC               Energy Consumption     2   Lower\n",
+       "3       GD                     Green Design     1  Higher\n",
+       "4       DS                   Delivery Speed     6  Higher\n",
+       "5      CSR  Corporate Social Responsibility     4  Higher\n",
+       "6       EE               Employee Education     7  Higher"
       ]
      },
      "execution_count": 2,
@@ -146,12 +146,12 @@
    "source": [
     "benefit_attributes = set()\n",
     "attributes = []\n",
-    "weights = []\n",
+    "rankings = []\n",
     "n = 0\n",
     "\n",
     "for i, row in attributes_data.iterrows():\n",
     "    attributes.append(row['Criteria'])\n",
-    "    weights.append(row['Weight'])\n",
+    "    rankings.append(row['Rank'])\n",
     "    n += 1\n",
     "    \n",
     "    if row['Ideally'] == 'Higher':\n",
@@ -274,45 +274,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.1859</td>\n",
+       "      <td>0.178571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.2788</td>\n",
+       "      <td>0.107143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.1115</td>\n",
+       "      <td>0.214286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.1394</td>\n",
+       "      <td>0.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.0929</td>\n",
+       "      <td>0.071429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.1115</td>\n",
+       "      <td>0.142857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.0796</td>\n",
+       "      <td>0.035714</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Weights\n",
-       "0   0.1859\n",
-       "1   0.2788\n",
-       "2   0.1115\n",
-       "3   0.1394\n",
-       "4   0.0929\n",
-       "5   0.1115\n",
-       "6   0.0796"
+       "    Weights\n",
+       "0  0.178571\n",
+       "1  0.107143\n",
+       "2  0.214286\n",
+       "3  0.250000\n",
+       "4  0.071429\n",
+       "5  0.142857\n",
+       "6  0.035714"
       ]
      },
      "execution_count": 5,
@@ -321,7 +321,9 @@
     }
    ],
    "source": [
-    "weights = np.array(weights)\n",
+    "rankings = np.array(rankings)\n",
+    "weights = 2 * (n + 1 - rankings) / (n * (n + 1))\n",
+    "\n",
     "pd.DataFrame(weights, columns=['Weights'])"
    ]
   },
@@ -502,7 +504,7 @@
        "      <th>S1</th>\n",
        "      <td>0.048780</td>\n",
        "      <td>0.148148</td>\n",
-       "      <td>0.181818</td>\n",
+       "      <td>0.15</td>\n",
        "      <td>0.208333</td>\n",
        "      <td>0.083333</td>\n",
        "      <td>0.153846</td>\n",
@@ -512,7 +514,7 @@
        "      <th>S2</th>\n",
        "      <td>0.121951</td>\n",
        "      <td>0.074074</td>\n",
-       "      <td>0.136364</td>\n",
+       "      <td>0.20</td>\n",
        "      <td>0.166667</td>\n",
        "      <td>0.083333</td>\n",
        "      <td>0.164835</td>\n",
@@ -522,7 +524,7 @@
        "      <th>S3</th>\n",
        "      <td>0.487805</td>\n",
        "      <td>0.037037</td>\n",
-       "      <td>0.181818</td>\n",
+       "      <td>0.15</td>\n",
        "      <td>0.125000</td>\n",
        "      <td>0.083333</td>\n",
        "      <td>0.142857</td>\n",
@@ -532,7 +534,7 @@
        "      <th>S4</th>\n",
        "      <td>0.048780</td>\n",
        "      <td>0.370370</td>\n",
-       "      <td>0.181818</td>\n",
+       "      <td>0.15</td>\n",
        "      <td>0.208333</td>\n",
        "      <td>0.333333</td>\n",
        "      <td>0.186813</td>\n",
@@ -542,7 +544,7 @@
        "      <th>S5</th>\n",
        "      <td>0.243902</td>\n",
        "      <td>0.148148</td>\n",
-       "      <td>0.136364</td>\n",
+       "      <td>0.20</td>\n",
        "      <td>0.125000</td>\n",
        "      <td>0.083333</td>\n",
        "      <td>0.164835</td>\n",
@@ -552,7 +554,7 @@
        "      <th>S6</th>\n",
        "      <td>0.048780</td>\n",
        "      <td>0.222222</td>\n",
-       "      <td>0.181818</td>\n",
+       "      <td>0.15</td>\n",
        "      <td>0.166667</td>\n",
        "      <td>0.333333</td>\n",
        "      <td>0.186813</td>\n",
@@ -563,13 +565,13 @@
        "</div>"
       ],
       "text/plain": [
-       "       Price   Quality        EC        GD        DS       CSR        EE\n",
-       "S1  0.048780  0.148148  0.181818  0.208333  0.083333  0.153846  0.190476\n",
-       "S2  0.121951  0.074074  0.136364  0.166667  0.083333  0.164835  0.142857\n",
-       "S3  0.487805  0.037037  0.181818  0.125000  0.083333  0.142857  0.142857\n",
-       "S4  0.048780  0.370370  0.181818  0.208333  0.333333  0.186813  0.190476\n",
-       "S5  0.243902  0.148148  0.136364  0.125000  0.083333  0.164835  0.142857\n",
-       "S6  0.048780  0.222222  0.181818  0.166667  0.333333  0.186813  0.190476"
+       "       Price   Quality    EC        GD        DS       CSR        EE\n",
+       "S1  0.048780  0.148148  0.15  0.208333  0.083333  0.153846  0.190476\n",
+       "S2  0.121951  0.074074  0.20  0.166667  0.083333  0.164835  0.142857\n",
+       "S3  0.487805  0.037037  0.15  0.125000  0.083333  0.142857  0.142857\n",
+       "S4  0.048780  0.370370  0.15  0.208333  0.333333  0.186813  0.190476\n",
+       "S5  0.243902  0.148148  0.20  0.125000  0.083333  0.164835  0.142857\n",
+       "S6  0.048780  0.222222  0.15  0.166667  0.333333  0.186813  0.190476"
       ]
      },
      "execution_count": 7,
@@ -622,31 +624,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Price</th>\n",
-       "      <td>0.666786</td>\n",
+       "      <td>0.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Quality</th>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.428571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EC</th>\n",
-       "      <td>0.399928</td>\n",
+       "      <td>0.857143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GD</th>\n",
-       "      <td>0.500000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DS</th>\n",
-       "      <td>0.333214</td>\n",
+       "      <td>0.285714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CSR</th>\n",
-       "      <td>0.399928</td>\n",
+       "      <td>0.571429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EE</th>\n",
-       "      <td>0.285509</td>\n",
+       "      <td>0.142857</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -654,13 +656,13 @@
       ],
       "text/plain": [
        "           Weight\n",
-       "Price    0.666786\n",
-       "Quality  1.000000\n",
-       "EC       0.399928\n",
-       "GD       0.500000\n",
-       "DS       0.333214\n",
-       "CSR      0.399928\n",
-       "EE       0.285509"
+       "Price    0.714286\n",
+       "Quality  0.428571\n",
+       "EC       0.857143\n",
+       "GD       1.000000\n",
+       "DS       0.285714\n",
+       "CSR      0.571429\n",
+       "EE       0.142857"
       ]
      },
      "execution_count": 8,
@@ -757,55 +759,55 @@
        "    <tr>\n",
        "      <th>S1</th>\n",
        "      <td>0.000000</td>\n",
-       "      <td>-0.023702</td>\n",
-       "      <td>-0.234146</td>\n",
-       "      <td>-1.230549</td>\n",
-       "      <td>-0.294682</td>\n",
-       "      <td>-1.003417</td>\n",
+       "      <td>-0.327819</td>\n",
+       "      <td>-0.292882</td>\n",
+       "      <td>-1.516551</td>\n",
+       "      <td>-0.536707</td>\n",
+       "      <td>-1.171015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S2</th>\n",
-       "      <td>-0.837781</td>\n",
+       "      <td>-0.700333</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>-0.588997</td>\n",
-       "      <td>-1.912532</td>\n",
-       "      <td>-0.453823</td>\n",
-       "      <td>-1.573135</td>\n",
+       "      <td>-0.247943</td>\n",
+       "      <td>-1.977770</td>\n",
+       "      <td>-0.561087</td>\n",
+       "      <td>-1.619643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S3</th>\n",
-       "      <td>-0.710805</td>\n",
-       "      <td>-0.209910</td>\n",
+       "      <td>-0.931105</td>\n",
+       "      <td>-0.492989</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>-1.677221</td>\n",
-       "      <td>-0.145838</td>\n",
-       "      <td>-1.475303</td>\n",
+       "      <td>-2.088571</td>\n",
+       "      <td>-0.548755</td>\n",
+       "      <td>-1.841270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S4</th>\n",
-       "      <td>0.462027</td>\n",
-       "      <td>0.447525</td>\n",
-       "      <td>0.082163</td>\n",
+       "      <td>0.356560</td>\n",
+       "      <td>0.061872</td>\n",
+       "      <td>-0.039756</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.281767</td>\n",
-       "      <td>0.279501</td>\n",
+       "      <td>-0.081800</td>\n",
+       "      <td>0.228050</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S5</th>\n",
-       "      <td>-0.648367</td>\n",
-       "      <td>0.075691</td>\n",
-       "      <td>-0.487870</td>\n",
-       "      <td>-1.874022</td>\n",
+       "      <td>-0.363026</td>\n",
+       "      <td>0.073358</td>\n",
+       "      <td>-0.198827</td>\n",
+       "      <td>-1.883937</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>-1.632553</td>\n",
+       "      <td>-1.572823</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S6</th>\n",
-       "      <td>0.138162</td>\n",
-       "      <td>0.287098</td>\n",
-       "      <td>-0.027055</td>\n",
-       "      <td>-0.510168</td>\n",
-       "      <td>0.144970</td>\n",
+       "      <td>0.128045</td>\n",
+       "      <td>-0.092376</td>\n",
+       "      <td>-0.130155</td>\n",
+       "      <td>-0.633655</td>\n",
+       "      <td>-0.189292</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -814,12 +816,12 @@
       ],
       "text/plain": [
        "          S1        S2        S3        S4        S5        S6\n",
-       "S1  0.000000 -0.023702 -0.234146 -1.230549 -0.294682 -1.003417\n",
-       "S2 -0.837781  0.000000 -0.588997 -1.912532 -0.453823 -1.573135\n",
-       "S3 -0.710805 -0.209910  0.000000 -1.677221 -0.145838 -1.475303\n",
-       "S4  0.462027  0.447525  0.082163  0.000000  0.281767  0.279501\n",
-       "S5 -0.648367  0.075691 -0.487870 -1.874022  0.000000 -1.632553\n",
-       "S6  0.138162  0.287098 -0.027055 -0.510168  0.144970  0.000000"
+       "S1  0.000000 -0.327819 -0.292882 -1.516551 -0.536707 -1.171015\n",
+       "S2 -0.700333  0.000000 -0.247943 -1.977770 -0.561087 -1.619643\n",
+       "S3 -0.931105 -0.492989  0.000000 -2.088571 -0.548755 -1.841270\n",
+       "S4  0.356560  0.061872 -0.039756  0.000000 -0.081800  0.228050\n",
+       "S5 -0.363026  0.073358 -0.198827 -1.883937  0.000000 -1.572823\n",
+       "S6  0.128045 -0.092376 -0.130155 -0.633655 -0.189292  0.000000"
       ]
      },
      "execution_count": 11,
@@ -877,27 +879,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>S1</th>\n",
-       "      <td>-2.786496</td>\n",
+       "      <td>-3.844974</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S2</th>\n",
-       "      <td>-5.366268</td>\n",
+       "      <td>-5.106776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S3</th>\n",
-       "      <td>-4.219077</td>\n",
+       "      <td>-5.902690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S4</th>\n",
-       "      <td>1.552983</td>\n",
+       "      <td>0.524926</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S5</th>\n",
-       "      <td>-4.567120</td>\n",
+       "      <td>-3.945254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S6</th>\n",
-       "      <td>0.033007</td>\n",
+       "      <td>-0.917433</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -905,12 +907,12 @@
       ],
       "text/plain": [
        "         Sum\n",
-       "S1 -2.786496\n",
-       "S2 -5.366268\n",
-       "S3 -4.219077\n",
-       "S4  1.552983\n",
-       "S5 -4.567120\n",
-       "S6  0.033007"
+       "S1 -3.844974\n",
+       "S2 -5.106776\n",
+       "S3 -5.902690\n",
+       "S4  0.524926\n",
+       "S5 -3.945254\n",
+       "S6 -0.917433"
       ]
      },
      "execution_count": 12,
@@ -958,11 +960,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Minimum</th>\n",
-       "      <td>-5.366268</td>\n",
+       "      <td>-5.902690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Maximum</th>\n",
-       "      <td>1.552983</td>\n",
+       "      <td>0.524926</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -970,8 +972,8 @@
       ],
       "text/plain": [
        "            Value\n",
-       "Minimum -5.366268\n",
-       "Maximum  1.552983"
+       "Minimum -5.902690\n",
+       "Maximum  0.524926"
       ]
      },
      "execution_count": 13,
@@ -1018,15 +1020,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>S1</th>\n",
-       "      <td>0.372840</td>\n",
+       "      <td>0.320137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S2</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.123827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S3</th>\n",
-       "      <td>0.165797</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S4</th>\n",
@@ -1034,11 +1036,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S5</th>\n",
-       "      <td>0.115496</td>\n",
+       "      <td>0.304535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>S6</th>\n",
-       "      <td>0.780327</td>\n",
+       "      <td>0.775600</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1046,12 +1048,12 @@
       ],
       "text/plain": [
        "      Rating\n",
-       "S1  0.372840\n",
-       "S2  0.000000\n",
-       "S3  0.165797\n",
+       "S1  0.320137\n",
+       "S2  0.123827\n",
+       "S3  0.000000\n",
        "S4  1.000000\n",
-       "S5  0.115496\n",
-       "S6  0.780327"
+       "S5  0.304535\n",
+       "S6  0.775600"
       ]
      },
      "execution_count": 14,
@@ -1131,15 +1133,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>S3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>S5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>5</th>\n",
        "      <td>S2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>S3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1150,9 +1152,9 @@
        "1   S4\n",
        "2   S6\n",
        "3   S1\n",
-       "4   S3\n",
-       "5   S5\n",
-       "6   S2"
+       "4   S5\n",
+       "5   S2\n",
+       "6   S3"
       ]
      },
      "execution_count": 16,
@@ -1176,7 +1178,7 @@
      "output_type": "stream",
      "text": [
       "The best candidate/alternative according to C* is S4\n",
-      "The preferences in descending order are S4, S6, S1, S3, S5, S2.\n"
+      "The preferences in descending order are S4, S6, S1, S5, S2, S3.\n"
      ]
     }
    ],
